Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp
@@ -1073,6 +1073,12 @@ void GraphicsLayerCA::commitLayerChangesBeforeSublayers(float pageScaleFactor, c
     if (m_uncommittedChanges & (Preserves3DChanged | ReplicatedLayerChanged))
         updateStructuralLayer(pageScaleFactor, positionRelativeToBase);
 
+    if (m_uncommittedChanges & GeometryChanged)
+        updateGeometry(pageScaleFactor, positionRelativeToBase);
+
+    if (m_uncommittedChanges & DrawsContentChanged)
+        updateLayerDrawsContent(pageScaleFactor, positionRelativeToBase);
+
     if (m_uncommittedChanges & NameChanged)
         updateLayerNames();
 
@@ -1088,12 +1094,6 @@ void GraphicsLayerCA::commitLayerChangesBeforeSublayers(float pageScaleFactor, c
     if (m_uncommittedChanges & BackgroundColorChanged) // Needs to happen before ChildrenChanged, and after updating image or video
         updateLayerBackgroundColor();
 
-    if (m_uncommittedChanges & ChildrenChanged)
-        updateSublayerList();
-
-    if (m_uncommittedChanges & GeometryChanged)
-        updateGeometry(pageScaleFactor, positionRelativeToBase);
-
     if (m_uncommittedChanges & TransformChanged)
         updateTransform();
 
@@ -1103,9 +1103,6 @@ void GraphicsLayerCA::commitLayerChangesBeforeSublayers(float pageScaleFactor, c
     if (m_uncommittedChanges & MasksToBoundsChanged)
         updateMasksToBounds();
     
-    if (m_uncommittedChanges & DrawsContentChanged)
-        updateLayerDrawsContent(pageScaleFactor, positionRelativeToBase);
-
     if (m_uncommittedChanges & ContentsVisibilityChanged)
         updateContentsVisibility();
 
@@ -1148,12 +1145,21 @@ void GraphicsLayerCA::commitLayerChangesBeforeSublayers(float pageScaleFactor, c
     
     if (m_uncommittedChanges & AcceleratesDrawingChanged)
         updateAcceleratesDrawing();
+
+    if (m_uncommittedChanges & ChildrenChanged) {
+        updateSublayerList();
+        // Sublayers may set this flag again, so clear it to avoid always updating sublayers in commitLayerChangesAfterSublayers().
+        m_uncommittedChanges &= ~ChildrenChanged;
+    }
 }
 
 void GraphicsLayerCA::commitLayerChangesAfterSublayers()
 {
     if (!m_uncommittedChanges)
         return;
+
+    if (m_uncommittedChanges & ChildrenChanged)
+        updateSublayerList();
 
     if (m_uncommittedChanges & ReplicatedLayerChanged)
         updateReplicatedLayers();
@@ -1414,8 +1420,19 @@ void GraphicsLayerCA::updateStructuralLayer(float pageScaleFactor, const FloatPo
     ensureStructuralLayer(structuralLayerPurpose(), pageScaleFactor, positionRelativeToBase);
 }
 
-void GraphicsLayerCA::ensureStructuralLayer(StructuralLayerPurpose purpose, float pageScaleFactor, const FloatPoint& positionRelativeToBase)
+void GraphicsLayerCA::ensureStructuralLayer(StructuralLayerPurpose purpose, float /*pageScaleFactor*/, const FloatPoint& /*positionRelativeToBase*/)
 {
+    const LayerChangeFlags structuralLayerChangeFlags = NameChanged
+        | GeometryChanged
+        | TransformChanged
+        | ChildrenTransformChanged
+        | ChildrenChanged
+        | BackfaceVisibilityChanged
+#if ENABLE(CSS_FILTERS)
+        | FiltersChanged
+#endif
+        | OpacityChanged;
+
     if (purpose == NoStructuralLayer) {
         if (m_structuralLayer) {
             // Replace the transformLayer in the parent with this layer.
@@ -1431,17 +1448,7 @@ void GraphicsLayerCA::ensureStructuralLayer(StructuralLayerPurpose purpose, floa
             // Release the structural layer.
             m_structuralLayer = 0;
 
-            // Update the properties of m_layer now that we no longer have a structural layer.
-            updateGeometry(pageScaleFactor, positionRelativeToBase);
-            updateTransform();
-            updateChildrenTransform();
-            
-#if ENABLE(CSS_FILTERS)
-            updateFilters();
-#endif
-
-            updateSublayerList();
-            updateOpacityOnLayer();
+            m_uncommittedChanges |= structuralLayerChangeFlags;
         }
         return;
     }
@@ -1469,19 +1476,12 @@ void GraphicsLayerCA::ensureStructuralLayer(StructuralLayerPurpose purpose, floa
     if (!structuralLayerChanged)
         return;
     
-    updateLayerNames();
+    m_uncommittedChanges |= structuralLayerChangeFlags;
 
-    // Update the properties of the structural layer.
-    updateGeometry(pageScaleFactor, positionRelativeToBase);
-    updateTransform();
-    updateChildrenTransform();
-    updateBackfaceVisibility();
-#if ENABLE(CSS_FILTERS)
-    // Filters cause flattening, so we should never have a layer for preserve-3d.
-    if (purpose != StructuralLayerForPreserves3D)
-        updateFilters();
-#endif
-    
+    // We've changed the layer that our parent added to its sublayer list, so tell it to update
+    // sublayers again in its commitLayerChangesAfterSublayers().
+    static_cast<GraphicsLayerCA*>(parent())->noteSublayersChanged();
+
     // Set properties of m_layer to their default values, since these are expressed on on the structural layer.
     FloatPoint point(m_size.width() / 2.0f, m_size.height() / 2.0f);
     FloatPoint3D anchorPoint(0.5f, 0.5f, 0);
@@ -1500,17 +1500,7 @@ void GraphicsLayerCA::ensureStructuralLayer(StructuralLayerPurpose purpose, floa
         }
     }
 
-    // Move this layer to be a child of the transform layer.
-    // If m_layer doesn't have a parent, it means it's the root layer and
-    // is likely hosted by something that is not expecting to be changed
-    ASSERT(m_layer->superlayer());
-    m_layer->superlayer()->replaceSublayer(m_layer.get(), m_structuralLayer.get());
-    m_structuralLayer->appendSublayer(m_layer.get());
-
     moveOrCopyAnimations(Move, m_layer.get(), m_structuralLayer.get());
-    
-    updateSublayerList();
-    updateOpacityOnLayer();
 }
 
 GraphicsLayerCA::StructuralLayerPurpose GraphicsLayerCA::structuralLayerPurpose() const
@@ -2578,7 +2568,7 @@ bool GraphicsLayerCA::requiresTiledLayer(float pageScaleFactor) const
     return m_size.width() * pageScaleFactor > cMaxPixelDimension || m_size.height() * pageScaleFactor > cMaxPixelDimension;
 }
 
-void GraphicsLayerCA::swapFromOrToTiledLayer(bool useTiledLayer, float pageScaleFactor, const FloatPoint& positionRelativeToBase)
+void GraphicsLayerCA::swapFromOrToTiledLayer(bool useTiledLayer, float /*pageScaleFactor*/, const FloatPoint& /*positionRelativeToBase*/)
 {
     ASSERT(m_layer->layerType() != PlatformCALayer::LayerTypePageTileCacheLayer);
     ASSERT(useTiledLayer != m_usingTiledLayer);
@@ -2600,20 +2590,20 @@ void GraphicsLayerCA::swapFromOrToTiledLayer(bool useTiledLayer, float pageScale
     if (oldLayer->superlayer())
         oldLayer->superlayer()->replaceSublayer(oldLayer.get(), m_layer.get());
 
-    updateGeometry(pageScaleFactor, positionRelativeToBase);
-    updateTransform();
-    updateChildrenTransform();
-    updateSublayerList();
-    updateMasksToBounds();
+    m_uncommittedChanges |= ChildrenChanged
+        | GeometryChanged
+        | TransformChanged
+        | ChildrenTransformChanged
+        | MasksToBoundsChanged
+        | ContentsOpaqueChanged
+        | BackfaceVisibilityChanged
+        | BackgroundColorChanged
+        | ContentsScaleChanged
+        | AcceleratesDrawingChanged
 #if ENABLE(CSS_FILTERS)
-    updateFilters();
+        | FiltersChanged
 #endif
-    updateContentsOpaque();
-    updateBackfaceVisibility();
-    updateLayerBackgroundColor();
-    updateContentsScale(pageScaleFactor, positionRelativeToBase);
-    updateAcceleratesDrawing();
-    updateOpacityOnLayer();
+        | OpacityChanged;
     
 #ifndef NDEBUG
     String name = String::format("%sCALayer(%p) GraphicsLayer(%p) ", (m_layer->layerType() == PlatformCALayer::LayerTypeWebTiledLayer) ? "Tiled " : "", m_layer->platformLayer(), this) + m_name;
